исправление метода архивации директории