@@ -2,10 +2,7 @@ package ru.job4j.io;
 
 import java.io.*;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipOutputStream;
 
@@ -14,24 +11,24 @@ public class Zip {
     public void packFiles(List<Path> sources, File target) {
         try (ZipOutputStream zip = new ZipOutputStream(new BufferedOutputStream(new FileOutputStream(target)))) {
             for (Path item : sources) {
-                if (item.toFile().isDirectory()) {
-                   addDirectory(zip, item, target);
-                }
-                packSingleFile(item.toFile(),target);
+                   addToZip(zip, item);
             }
         } catch (Exception e) {
             e.printStackTrace();
         }
     }
 
-   public void addDirectory(ZipOutputStream zout, Path dir, File target) {
+   public void addToZip(ZipOutputStream zout, Path dir) throws IOException {
         File[] nd = dir.toFile().listFiles();
        for (File itm : nd) {
            if (itm.isDirectory()) {
-               addDirectory(zout, itm.toPath(), target);
+               addToZip(zout, itm.toPath());
                continue;
            }
-           packSingleFile(itm, target);
+            zout.putNextEntry(new ZipEntry(itm.getPath()));
+           try (BufferedInputStream out = new BufferedInputStream(new FileInputStream(itm))) {
+               zout.write(out.readAllBytes());
+           }
        }
     }
 
@@ -48,9 +45,9 @@ public class Zip {
 
     public static void main(String[] args) throws IOException {
         ArgsName argsName = ArgsName.of(args);
-        Path startArg = Paths.get(argsName.get("d"));
+        Path startArg = Path.of(argsName.get("d"));
         String excludes = argsName.get("e");
-        List<Path> start = Search.search(startArg, x -> x.toFile().getName().endsWith(excludes));
+        List<Path> start = Search.search(startArg, x -> !x.toFile().getName().endsWith(excludes));
         File out = new File(argsName.get("o"));
         new Zip().packFiles(start,out);
     }
